# KAI--AI-PROJECT

./: .gitignore  PROJECT_STRUCTURE.md  START_HERE.md  calendar_mcp_standalone.py  manage_databases.py  package-lock.json  setup_db.ps1  start-auth-bff.bat  test_api.json  test_clear_history.py  test_groq.py  test_transcription.py
auth-bff/: .env.example  package-lock.json  package.json
auth-bff/src/: server.mjs
backend/: alembic.ini  calendar_mcp_requirements.txt  calendar_mcp_server.py  calendar_mcp_standalone.py  pyproject.toml  requirements.txt  setup.ps1
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_scribe_folders_notes.py  003_exam_papers.py  004_vault_upgrades.py
backend/app/: __init__.py  config.py  dependencies.py  formatting.py  main.py
backend/app/agent/: tools.py
backend/app/api/v1/: auth.py  chat.py  courses.py  documents.py  examiner.py  progress.py  router.py  scribe.py
backend/app/auth/: jwt.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/llm/: __init__.py  gemini_client.py  groq_client.py
backend/app/mcp/: README.md  __init__.py  adapter_template.py  calendar_mcp.py
backend/app/rag/: __init__.py  chroma_store.py  chunker.py  embedder.py  prompt.py  retriever.py  unified_core.py
backend/app/schemas/: __init__.py  auth.py  chat.py  documents.py  examiner.py  progress.py  scribe.py
calendar-mcp/: README.md  server.js
frontend/: MCP_INTEGRATION_GUIDE.md  index.html  package-lock.json  package.json  requirements.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIResponseCard.css  AIResponseCard.jsx  BootScreen.tsx  Dashboard.tsx  MCPAdapterExamples.tsx  OnboardingScreen.tsx  Sidebar.tsx
frontend/src/features/commander/: ActiveProtocol.tsx  ActiveProtocolWidget.tsx  (+4 more)
(+24 files in other folders)
